--- a/resurse/static/style/layout.css
+++ b/resurse/static/style/layout.css
@@ -14,6 +14,7 @@ body{
     align-items: center;
     gap: 50px;
     background-color: rgba(3, 23, 44, 0.75);
+    margin-bottom: 200px;
 }
 
 .app-name{
