--- a/resurse/static/style/layout.css
+++ b/resurse/static/style/layout.css
@@ -1,26 +1,27 @@
 body{
     color: #FFFFFF;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .header{
-    position: absolute;
-    top:0;
-    left: 0;
     display: flex;
     width: 100%;
     height: 90px;
     flex-direction: row;
-    justify-content: center;
     align-items: center;
     gap: 50px;
     background-color: rgba(3, 23, 44, 0.75);
-    margin-bottom: 200px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .app-name{
     display: flex;
     flex-direction: row;
     gap: 20px;
+    margin-left: 5dvw;
 }
 
 .app-name img{
@@ -33,7 +34,8 @@ body{
 
 .button-container{
     display: flex;
-    position: relative;
+    position: absolute;
+    left: 50%;
     flex-direction: row;
 }
 
@@ -47,18 +49,17 @@ body{
     transition: 0.5s;
 }
 
-.button:hover{
-    background-color: rgba(180, 191, 202, 0.75);;
+.header-button:hover{
+    background-color: rgba(180, 191, 202, 0.75);
 }
 
-.button:active{
+.header-button:active{
     background-color: rgba(180, 191, 202, 0.5);
 }
 
 .footer{
     display: flex;
     flex-direction: row;
-    position: absolute;
     bottom: 0;
     left: 0;
     height: 70px;
@@ -67,4 +68,73 @@ body{
     justify-content: center;
     align-items: center;
     gap:10px;
+    margin-top: 40px;
+}
+
+.work-area{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #03172C;
+    width: 80%;
+    height: 100%;
+}
+
+.theme-title{
+    font-size: 4dvi;
+}
+
+.theme-subtitle{
+    font-size: 3dvi;
+    justify-self: center;
+    align-self: center;
+    margin-top: 40px;
+}
+
+.theme-text{
+    font-size: 20px;
+}
+
+.theme-text li{
+    list-style-type:square;
+}
+
+.work-area img{
+    width: 450px;
+    margin-top: 20px;
+}
+
+.choice-container{
+    display: flex;
+    flex-direction: row;
+    gap: 80px;
+}
+
+.choice-column{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.choice-container img{
+    width: 250px;
+}
+
+.choice-button{
+    background-color: rgba(3, 23, 44, 0.3);
+    border-radius: 5px;
+    width: 250px;
+    cursor: pointer;
+    text-align: center;
+    transition: 0.2s;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.choice-button:hover{
+     background-color: rgba(180, 191, 202, 0.75);
+}
+
+.choice-button:active{
+    background-color: rgba(180, 191, 202, 0.5);;
 }
