Добавление разметки и стилей для страницы "О нас"

--- a/resurse/template/header.j2
+++ b/resurse/template/header.j2
@@ -8,7 +8,7 @@
         <div class="header-button">
             <p>ЗАДАЧИ</p>
         </div>
-        <div class="header-button">
+        <div id="about_btn" class="header-button">
             <p>О НАС</p>
         </div>
     </div>
