--- a/resurse/static/style/layout.css
+++ b/resurse/static/style/layout.css
@@ -9,6 +9,9 @@ body{
 
 .header{
     display: flex;
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 90px;
     flex-direction: row;
@@ -60,6 +63,7 @@ body{
 
 .footer{
     display: flex;
+    position: fixed;
     flex-direction: row;
     bottom: 0;
     left: 0;
@@ -73,6 +77,8 @@ body{
 }
 
 .work-area{
+    margin-top: 100px;
+    margin-bottom: 100px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -80,6 +86,10 @@ body{
     color: #03172C;
     width: 80%;
     height: 100%;
+}
+
+.work-area a{
+    text-decoration: none;
 }
 
 .theme-title{
@@ -139,3 +149,29 @@ body{
 .choice-button:active{
     background-color: rgba(180, 191, 202, 0.5);;
 }
+
+.authors-container{
+    width: 100%;
+    color:#FFFFFF;
+    background-color: rgba(3, 23, 44, 0.75);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    display: flex;
+    justify-content: space-evenly;
+    border-radius: 15px;
+    flex-direction: row;
+    gap: 20px;
+}
+
+.author-card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+
+}
+
+.author-card img{
+    width: 120px;
+    border-radius: 50%;
+}
+
