Добавление выпадающего списка для задач

--- a/resurse/template/header.j2
+++ b/resurse/template/header.j2
@@ -7,6 +7,17 @@
     <div class="button-container">
         <div class="header-button">
             <p>ЗАДАЧИ</p>
+            <div class="dropdown">
+                <div class="header-button">
+                    <p>МСМО с неограниченной очередью</p>
+                </div>
+                <div class="header-button">
+                    <p>МСМО с отказами</p>
+                </div>
+                <div class="header-button">
+                    <p>Оценка надежности системы</p>
+                </div>
+            </div>
         </div>
         <div id="about_btn" class="header-button">
             <p>О НАС</p>
