--- a/resurse/static/style/layout.css
+++ b/resurse/static/style/layout.css
@@ -21,6 +21,19 @@ body{
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+.dropdown {
+    display: none;
+    width: 180px;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: rgba(3, 23, 44, 0.95);
+}
+
+.header-button:hover .dropdown {
+    display: block;
+}
+
 .app-name{
     display: flex;
     flex-direction: row;
