--- a/resurse/static/style/layout.css
+++ b/resurse/static/style/layout.css
@@ -17,7 +17,7 @@ body{
     flex-direction: row;
     align-items: center;
     gap: 50px;
-    background-color: rgba(3, 23, 44, 0.75);
+    background-color: #394857;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -82,7 +82,7 @@ body{
     left: 0;
     height: 70px;
     width: 100%;
-    background-color: rgba(3, 23, 44, 0.75);
+    background-color: #394857;
     justify-content: center;
     align-items: center;
     gap:10px;
@@ -91,7 +91,7 @@ body{
 
 .work-area{
     margin-top: 100px;
-    margin-bottom: 100px;
+    margin-bottom: 150px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -188,3 +188,41 @@ body{
     border-radius: 50%;
 }
 
+.skip-parts{
+    color:#03172C;
+    background-color: rgba(3, 23, 44, 0.75);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.theory{
+    width: 150px;
+    height: 150px;
+    border-color: #03172C 3px solid;
+}
+
+.input-form{
+    width: 500px;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgba(3, 23, 44, 0.75);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 15px;
+}
+
+.form-text{
+    color:#FFFFFF;
+    font-size: 16px;
+}
+
+.form-input{
+    color:#FFFFFF;
+    font-size: 16px;
+    background-color: transparent;
+    width: 80px;
+    height: 35px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    text-align: center;
+}
