Добавил в каждую страницу калькуляторов плашку пропуска разделов

--- a/resurse/template/block_system_page.j2
+++ b/resurse/template/block_system_page.j2
@@ -1,21 +1,36 @@
-<div class="skip-parts">
+<div class="calc-area">
+    <div class="skip-parts">
         <div class="skip-button">
-            <p>Теория</p>
+            <p class="theme-text">ТЕОРИЯ</p>
         </div>
         <div class="skip-button">
-            <p>Ввод параметров</p>
+            <p class="theme-text">ВВОД ПАРАМЕТРОВ</p>
         </div>
         <div class="skip-button">
-            <p>Решение</p>
+            <p class="theme-text">РЕШЕНИЕ</p>
         </div>
     </div>
     <div class="work-area">
+        <p class="theme-title">Теория</p>
         <div class="theory">
         </div>
+        <p class="theme-title">Ввод параметров</p>
         <div class="input-form">
-
+            <p class="form-text">Интенсивность пуассоновского потока</p>
+            <input class="form-input" type="number">
+            <p class="form-text">Время обслуживания</p>
+            <input class="form-input" type="number">
+            <p class="form-text">Продолжительность симуляции</p>
+            <input class="form-input" type="number">
+            <p class="form-text">Количество каналов обслуживания</p>
+            <input class="form-input" type="number">
+            <p class="form-text">Количество запусков симуляции</p>
+            <input class="form-input" type="number">
+            <button class="solve-button">РЕШИТЬ</button>
         </div>
+        <p class="theme-title">Решение</p>
         <div class="solve-area">
 
         </div>
     </div>
+</div>
