--- a/resurse/template/cfr_unlimited_page.j2
+++ b/resurse/template/cfr_unlimited_page.j2
@@ -1,4 +1,16 @@
-<div class="work-area">
+<div class="calc-area">
+    <div class="skip-parts">
+        <div class="skip-button">
+            <p class="theme-text">ТЕОРИЯ</p>
+        </div>
+        <div class="skip-button">
+            <p class="theme-text">ВВОД ПАРАМЕТРОВ</p>
+        </div>
+        <div class="skip-button">
+            <p class="theme-text">РЕШЕНИЕ</p>
+        </div>
+    </div>
+    <div class="work-area">
         <p class="theme-title">Теория</p>
         <div class="theory">
         </div>
@@ -14,9 +26,11 @@
             <input class="form-input" type="number">
             <p class="form-text">Количество итераций</p>
             <input class="form-input" type="number">
+            <button class="solve-button">РЕШИТЬ</button>
         </div>
         <p class="theme-title">Решение</p>
         <div class="solve-area">
 
         </div>
     </div>
+</div>
