--- a/resurse/static/style/layout.css
+++ b/resurse/static/style/layout.css
@@ -110,6 +110,8 @@ body{
     color: #03172C;
     width: 80%;
     height: 100%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .work-area a{
@@ -199,11 +201,63 @@ body{
     border-radius: 50%;
 }
 
+.calc-area{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+
 .skip-parts{
-    color:#03172C;
+    display: flex;
+    flex-direction: column;
+    color:#FFFFFF;
     background-color: rgba(3, 23, 44, 0.75);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    height: 180px;
+    width: 220px;
+    top: 35%;
+    position: fixed;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
 }
+
+.skip-button{
+    width: 100%;
+    cursor: pointer;
+    height: 100%;
+}
+
+.skip-button:hover{
+    background-color: rgba(180, 191, 202, 0.75);
+}
+
+.skip-button:active{
+    background-color: rgba(180, 191, 202, 0.5);
+}
+
+.solve-button{
+    margin-top: 20px;
+    background-color: rgba(97, 128, 163, 0.3);
+    border-radius: 5px;
+    width: 150px;
+    height: 40px;
+    cursor: pointer;
+    text-align: center;
+    transition: 0.2s;
+    color: #FFFFFF;
+    border: none;
+    font-size: 15px;
+}
+
+.solve-button:hover{
+    background-color: rgba(180, 191, 202, 0.75);
+}
+
+.solve-button:active{
+    background-color: rgba(180, 191, 202, 0.5);
+}
+
 
 .theory{
     width: 150px;
@@ -212,8 +266,8 @@ body{
 }
 
 .input-form{
-    width: 500px;
-    height: 500px;
+    width: 450px;
+    height: 550px;
     display: flex;
     flex-direction: column;
     align-items: center;
