--- a/resurse/static/style/layout.css
+++ b/resurse/static/style/layout.css
@@ -214,12 +214,16 @@ body{
     background-color: rgba(3, 23, 44, 0.75);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     height: 180px;
-    width: 220px;
+    width: 15dvw;
     top: 35%;
     position: fixed;
     text-align: center;
     justify-content: center;
     align-items: center;
+}
+
+.skip-parts p{
+    font-size: 2dvb;
 }
 
 .skip-button{
@@ -270,10 +274,13 @@ body{
     height: 550px;
     display: flex;
     flex-direction: column;
-    align-items: center;
     background-color: rgba(3, 23, 44, 0.75);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 15px;
+}
+
+.input-column{
+    margin-left: 30px;
 }
 
 .form-text{
@@ -290,4 +297,8 @@ body{
     border: 1px solid #ccc;
     border-radius: 4px;
     text-align: center;
+}
+
+.solve-button{
+    align-self: center;
 }
