--- a/resurse/template/block_system_page.j2
+++ b/resurse/template/block_system_page.j2
@@ -1,13 +1,16 @@
 <div class="calc-area">
     <div class="skip-parts">
         <div class="skip-button">
-            <p class="theme-text">ТЕОРИЯ</p>
+            <p class="theme-title">ТЕОРИЯ</p>
+            <span "theme-text">
+                
+            </span>
         </div>
         <div class="skip-button">
-            <p class="theme-text">ВВОД ПАРАМЕТРОВ</p>
+            <p class="theme-title">ВВОД ПАРАМЕТРОВ</p>
         </div>
         <div class="skip-button">
-            <p class="theme-text">РЕШЕНИЕ</p>
+            <p class="theme-title">РЕШЕНИЕ</p>
         </div>
     </div>
     <div class="work-area">
@@ -16,16 +19,26 @@
         </div>
         <p class="theme-title">Ввод параметров</p>
         <div class="input-form">
-            <p class="form-text">Интенсивность пуассоновского потока</p>
-            <input class="form-input" type="number">
-            <p class="form-text">Время обслуживания</p>
-            <input class="form-input" type="number">
-            <p class="form-text">Продолжительность симуляции</p>
-            <input class="form-input" type="number">
-            <p class="form-text">Количество каналов обслуживания</p>
-            <input class="form-input" type="number">
-            <p class="form-text">Количество запусков симуляции</p>
-            <input class="form-input" type="number">
+            <div class="input-column">
+                <p class="form-text">Интенсивность пуассоновского потока</p>
+                <input class="form-input" type="number">
+            </div>
+            <div class="input-column">
+                <p class="form-text">Время обслуживания</p>
+                <input class="form-input" type="number">
+            </div>
+            <div class="input-column">
+                <p class="form-text">Продолжительность симуляции</p>
+                <input class="form-input" type="number">
+            </div>
+            <div class="input-column">
+                <p class="form-text">Количество каналов обслуживания</p>
+                <input class="form-input" type="number">
+            </div>
+            <div class="input-column">
+                <p class="form-text">Количество запусков симуляции</p>
+                <input class="form-input" type="number">
+            </div>
             <button class="solve-button">РЕШИТЬ</button>
         </div>
         <p class="theme-title">Решение</p>
