--- a/resurse/static/style/layout.css
+++ b/resurse/static/style/layout.css
@@ -108,7 +108,7 @@ body{
     justify-content: center;
     align-items: center;
     color: #03172C;
-    width: 80%;
+    width: 70%;
     height: 100%;
     margin-left: auto;
     margin-right: auto;
@@ -213,8 +213,9 @@ body{
     color:#FFFFFF;
     background-color: rgba(3, 23, 44, 0.75);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 5px;
     height: 180px;
-    width: 15dvw;
+    width: 13dvw;
     top: 35%;
     position: fixed;
     text-align: center;
@@ -264,9 +265,15 @@ body{
 
 
 .theory{
-    width: 150px;
-    height: 150px;
     border-color: #03172C 3px solid;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.theory img{
+    align-self: center;
+    width: auto;
 }
 
 .input-form{
