--- a/resurse/template/cfr_refusal_page.j2
+++ b/resurse/template/cfr_refusal_page.j2
@@ -2,9 +2,6 @@
     <div class="skip-parts">
         <div class="skip-button">
             <p class="theme-title">ТЕОРИЯ</p>
-            <span "theme-text">
-                
-            </span>
         </div>
         <div class="skip-button">
             <p class="theme-title">ВВОД ПАРАМЕТРОВ</p>
@@ -14,8 +11,65 @@
         </div>
     </div>
     <div class="work-area">
+        <p class="theme-subtitle">МСМО с отказами</p>
         <p class="theme-title">Теория</p>
         <div class="theory">
+            <span class="theme-text">Рассмотрим классическую задачу Эрланга.</span>
+            <span class="theme-text">
+                Имеется n каналов, на которые поступает поток заявок с интенсивностью λ. Поток обслуживаний имеет интенсивность μ. Найти предельные вероятности состояний системы и показатели ее эффективности.
+                Система S (СМО) имеет следующие состояния (нумеруем их по числу заявок, находящихся в системе): S0, S1, S2, …, Sk, …, Sn, где Sk — состояние системы, когда в ней находится k заявок, т.е. занято k каналов.
+            </span>
+            <span class="theme-text">Граф состояний СМОсоответствует процессу гибели и размножения и показан на рисунке ниже</span>
+            <img src="https://math.semestr.ru/cmo/images/c1_image041.jpg">
+            <span class="theme-text">
+                Поток заявок последовательно переводит систему из любого левого состояния в соседнее правое с одной и той же интенсивностью λ. Интенсивность же потока обслуживаний, переводящих систему из любого правого состояния в соседнее левое состояние, постоянно меняется в зависимости от состояния. Действительно, если СМО находится в состоянии S2 (два канала заняты), то она может перейти в состояние. S1 (один канал занят), когда закончит обслуживание либо первый, либо второй канал, т.е. суммарная интенсивность их потоков обслуживании будет 2μ.
+            </span>
+            <span class="theme-text">
+                Аналогично суммарный поток обслуживаний, переводящий СМО из состояния S3 (три канала заняты) в S2. будет иметь интенсивность Зμ, т.е. может освободиться любой из трех каналов и т.д.
+            </span>
+            <span class="theme-text">
+                В формуле для схемы гибели и размножения получим для предельной вероятности состояния
+            </span>
+            <img src="https://math.semestr.ru/cmo/images/c1_image042.gif">
+            <span class="theme-text">где члены разложения</span>
+            <img src="https://math.semestr.ru/cmo/images/c1_image043.gif">
+            <span class="theme-text">
+                будут представлять собой коэффициенты приp0 в выражениях для предельных вероятностей p1, p2, …, pk, …, pn.
+            </span>
+            <span class="theme-text">Величина</span>
+            <img src="https://math.semestr.ru/cmo/images/c1_image044.gif">
+            <span class="theme-text">
+                называется приведенной интенсивностью потока заявок или интенсивностью нагрузки канала.Она выражает среднее число заявок, приходящее за среднее время обслуживания одной заявки. Теперь p1=ρ·p0
+            </span>
+            <img src="https://math.semestr.ru/cmo/images/c1_image046.gif">
+            <span class="theme-text">
+                Формулы и для предельных вероятностей получили названия формул Эрланга в честь основателя теории массового обслуживания.
+            </span>
+            <span class="theme-text">
+                Вероятность отказа СМО есть предельная вероятность того, что все n каналов системы будут заняты, т.е.
+            </span>
+            <img src="https://math.semestr.ru/cmo/images/c1_image047.gif">
+            <span class="theme-text">
+                Относительная пропускная способность — вероятность того, что заявка будет обслужена:
+            </span>
+            <img src="https://math.semestr.ru/cmo/images/c1_image048.gif">
+            <span class="theme-text">
+            Абсолютная пропускная способность:
+            </span>
+            <img src="https://math.semestr.ru/cmo/images/c1_image049.gif">
+            <span class="theme-text">
+                Среднее число занятых каналов k есть математическое ожидание числа занятых каналов:
+            </span>
+            <img src="https://math.semestr.ru/cmo/images/c1_image050.gif">
+            <span class="theme-text">
+            где pk — предельные вероятности состояний, определяемых по формулам.
+            </span>
+            <span class="theme-text">
+            Однако среднее число занятых каналов можно найти проще, если учесть, что абсолютная пропускная способность системы А есть не что иное, как интенсивность потока обслуженных системой заявок (в единицу времени). Так как каждый занятый канал обслуживает в среднем μ заявок (в единицу времени), то среднее число занятых каналов
+            </span>
+            <img src="https://math.semestr.ru/cmo/images/c1_image051.gif">
+            <span class="theme-text">или, учитывая,</span>
+            <img src="https://math.semestr.ru/cmo/images/c1_image052.gif">
         </div>
         <p class="theme-title">Ввод параметров</p>
         <div class="input-form">
