--- a/resurse/template/cfr_unlimited_page.j2
+++ b/resurse/template/cfr_unlimited_page.j2
@@ -11,6 +11,7 @@
         </div>
     </div>
     <div class="work-area">
+        <p class="theme-subtitle">МСМО с неограниченными очередями</p>
         <p class="theme-title">Теория</p>
         <div class="theory">
             <span class="theme-text">
@@ -49,23 +50,23 @@
         <div class="input-form">
             <div class="input-column">
                 <p class="form-text">Время обслуживания заявки</p>
-                <input class="form-input" type="number" placeholder="Цифра">
+                <input class="form-input" id="input-field" type="number" placeholder="Введите значение">
             </div>
             <div class="input-column">
                 <p class="form-text">Максимальное время симуляции</p>
-                <input class="form-input" type="number" placeholder="Цифра">
+                <input class="form-input" type="number" placeholder="Введите значение">
             </div>
             <div class="input-column">
                 <p class="form-text">Параметр рассчета интервала между заявками</p>
-                <input class="form-input" type="number" placeholder="Цифра">
+                <input class="form-input" type="number" placeholder="Введите значение">
             </div>
             <div class="input-column">
                 <p class="form-text">Количество потоков</p>
-                <input class="form-input" type="number" placeholder="Цифра">
+                <input class="form-input" type="number" placeholder="Введите значение">
             </div>
             <div class="input-column">
                 <p class="form-text">Количество итераций</p>
-                <input class="form-input" type="number" placeholder="Цифра">
+                <input class="form-input" type="number" placeholder="Введите значение">
             </div>
             <button class="solve-button">РЕШИТЬ</button>
         </div>
