--- a/resurse/template/header.j2
+++ b/resurse/template/header.j2
@@ -2,25 +2,25 @@
 <div class="header">
     <div class="app-name">
         <img src="static\assets\logo.svg">
-        <p>Relia-Queue</p>
+        <a class="theme-subtitle" href="/">Relia-Queue</a>
     </div>
     <div class="button-container">
         <div class="header-button">
             <p>ЗАДАЧИ</p>
             <div class="dropdown">
                 <div class="header-button">
-                    <p>МСМО с неограниченной очередью</p>
+                    <a href="/cfr-unlimited">МСМО с неограниченной очередью</a>
                 </div>
                 <div class="header-button">
-                    <p>МСМО с отказами</p>
+                    <a href="/cfr-refusal">МСМО с отказами</a>
                 </div>
                 <div class="header-button">
-                    <p>Оценка надежности системы</p>
+                    <a href="/block-system">Оценка надежности системы</a>
                 </div>
             </div>
         </div>
         <div id="about_btn" class="header-button">
-            <p>О НАС</p>
+            <a href="/about">О НАС</a>
         </div>
     </div>
 </div>
