--- a/resurse/template/main_page.j2
+++ b/resurse/template/main_page.j2
@@ -11,13 +11,13 @@
         <div class="choice-container">
             <div class="choice-column">
                 <div class="choice-button">
-                    <p class="theme-text">Многоканальные СМО с неограниченной очередью</p>
+                    <a class="theme-text" href="/cfr-unlimited">Многоканальные СМО с неограниченной очередью</a>
                 </div>
                 <img src="https://sun9-51.userapi.com/impg/Koy-Cp9ah5o9yr2LuLhhinLm9oU7UACLh29awA/Ran6lUijdaE.jpg?size=492x162&quality=96&sign=1b3fc1a0507c40c5185f1a5545b88abb&type=album">
             </div>
             <div class="choice-column">
                 <div class="choice-button">
-                    <p class="theme-text">Многоканальные СМО с отказами</p>
+                    <a class="theme-text" href="/cfr-refusal">Многоканальные СМО с отказами</a>
                 </div>
                 <img src="https://sun9-4.userapi.com/impg/gmo5RHlgXI0J_b3AQOIBIAVgohAxBwaX3ZdjuQ/VUA5a3GyUaU.jpg?size=494x140&quality=96&sign=23dae828308155fad9b0aea469cdca2c&type=album">
             </div>
@@ -38,7 +38,7 @@
         <div class="choice-container">
             <div class="choice-column">
                 <div class="choice-button">
-                    <p class="theme-text">Оценка надежности системы методом Монте-Карло</p>
+                    <a href="/block-system" class="theme-text">Оценка надежности системы методом Монте-Карло</a>
                 </div>
             </div>
         </div>
