Добавление теории в задание с монте-карло

--- a/resurse/template/block_system_page.j2
+++ b/resurse/template/block_system_page.j2
@@ -14,7 +14,60 @@
         <p class="theme-subtitle" style="text-align: center">Оценка надежности системы методом Монте-Карло</p>
         <p class="theme-title">Теория</p>
         <div class="theory">
-            
+            <span class="theme-text">
+            Пример. Система состоит из двух блоков, соединенных последовательно. Система отказывает при отказе хотя бы одного блока. Первый блок содержит два элемента: А, В (они соединены параллельно) и отказывает при одновременном отказе обоих элементов. Второй – содержит один элемент С и отказывает при отказе этого элемента.
+            </span>
+            <span class="theme-text">
+                1. Найти методом Монте-Карло оценку Р* надежности (вероятности безотказной работы) системы, зная вероятности безотказной работы элементов: Р(А)=0.8, Р (В)=0.85, Р (С)=0.6;
+            </span>
+            <span class="theme-text">
+            2. Найти абсолютную погрешность |Р − Р*| найденного значения, где Р- надежность системы, вычисленная аналитически.
+            </span>
+            <span class="theme-text">
+            Произвести 50 испытаний.
+            </span>
+            <span> </span>
+            <span> --------- </span>
+            <span> </span>
+            <span class="theme-text">
+            С помощью генератора случайных чисел получаем (или выбираем из специальных таблиц равномерно распределенных случайных чисел) три случайных числа, например: 0.10, 0.09 и 0.73.
+            </span>
+            <span class="theme-text">
+            Далее считаем, если случайное число меньше вероятности соответствующего события, то событие наступило (элемент работает безотказно).
+            </span>
+            <span class="theme-text">
+            Если случайное число больше или равно вероятности события, то событие не наступило (отказ).
+            </span>
+            <span class="theme-text">
+            Разыграем события А, В, С, состоящие в безотказной работе соответственно элементов А, В, С. Результаты испытания будем записывать в расчетную таблицу. 
+            </span>
+            <span class="theme-text">
+            Поскольку Р(А)=0.8 и 0.10 <0.8, то событие наступило, т.е. элемент А в этом испытании работает безотказно. Так как Р(В)=0.85 и 0.09<0.85, то событие В наступило, т.е. элемент В работает безотказно.
+            </span>
+            <span class="theme-text">
+            Таким образом, оба элемента первого блока работают; следовательно, работает и сам первый блок. В соответствующих клетках таблицы 1 ставим знак плюс (или 1).
+            </span>
+            <span class="theme-text">
+            Так как Р(С)=0.6 и 0.73>0.6, то событие С не наступило, т.е. элемент C получает отказ; другими словами, второй блок, а значит и вся система, получают отказ. В соответствующих клетках таблицы 1 ставим знак минус (или 0).
+            </span>
+            <span class="theme-text">
+            Аналогично разыгрываются и остальные испытания. В таблице 1 приведены результаты четырех испытаний.
+            </span>
+            <img src="https://sun9-26.userapi.com/impg/FoWEAhFwJQs4TYSGlt5RRTZX4d_h04lOL5MCww/mwujYa2EpAs.jpg?size=618x204&quality=96&sign=580b7ab724f2f77d6c7870dd6d7e911e&type=album">
+            <span class="theme-text">
+            Произведя 50 испытаний, получим, что в 28 из них система работала безотказно. В качестве оценки искомой надежности Р примем относительную частоту Р*=28/50=0.56.
+            </span>
+            <span class="theme-text">
+            Найдем надежность системы Р аналитически. Вероятности безотказной работы первого и второго блоков соответственно равны:
+            </span>
+            <img src="https://sun9-36.userapi.com/impg/L9l8QABXA8LNF1leutfPfyZRf8JfvbSygSb5Ow/tAo5bFBasuE.jpg?size=661x53&quality=96&sign=35752fdfad33f1019c066481ffc7aa66&type=album">
+            <span class="theme-text">
+            Вероятность безотказной работы системы
+            </span>
+            <img src="https://sun9-7.userapi.com/impg/8djrfdtobRjQI9C1ApoMVqnuqgDd4DEOXPw-Zg/Buf0KqRBMnE.jpg?size=418x77&quality=96&sign=e936c9cb69411ae6cd0ba0da088ff1a6&type=album">
+            <span class="theme-text">
+            Искомая абсолютная погрешность равна |Р − P*|= 0.582 − 0.56 = 0.022.
+            </span>
         </div>
         <p class="theme-title">Ввод параметров</p>
         <div class="input-form" style="height: 800px; color: #FFFFFF;">
