--- a/resurse/template/block_system_page.j2
+++ b/resurse/template/block_system_page.j2
@@ -70,7 +70,7 @@
             </span>
         </div>
         <p class="theme-title">Ввод параметров</p>
-        <div class="input-form" style="height: 800px; color: #FFFFFF;">
+        <div class="input-form" style="height: 800px; color: #FFFFFF; align-items: center;">
             <div class="block-system">
             <p>Введите параметры системы</p>
             <div class="element-system">
