Добавил обработку мат. выражений и переделал формулы

--- a/resurse/template/cfr_unlimited_page.j2
+++ b/resurse/template/cfr_unlimited_page.j2
@@ -25,16 +25,16 @@
             <span class="theme-text">
                 Можно показать, что при r/n < 1 предельные вероятности существуют. Если r/n > 1, очередь растет до бесконечности. Используя формулы (16) и (17) для процесса гибели и размножения, можно получить следующие формулы для предельных вероятностей состояний n-канальной СМО с неограниченной очередью
             </span>
-            <img src="https://www.semestr.ru/images/math/cmo/c1_image071.gif">
-            <img src="https://www.semestr.ru/images/math/cmo/c1_image072.gif">
-            <img src="https://www.semestr.ru/images/math/cmo/c1_image073.gif">
+            <p class="theme-text"><span class="math display">$$p_{0} = \left(1 + \frac{p}{1!} + \frac{p^{2}}{2!} + ... + \frac{p^{n-1}}{n-1!} + \frac{p^{n}}{n! (n-p))}\right)$$</span></p>
+            <p class="theme-text"><span class="math display">$$p_{1} = \frac{p}{1!}p_{0}, ..., p_{k} = \frac{p^{k}}{k!}p_{0}, ..., p_{n} = \frac{p^{n}}{n!}p_{0}$$</span></p>
+            <p class="theme-text"><span class="math display">$$p_{n+1} = \frac{p^{n+1}}{n*n!}p_{0}, ..., p_{n+r} = \frac{p^{n+r}}{n^{r} * n! } p_{0}, ...$$</span></p>
             <span class="theme-text">
                 Для n-канальной СМО с неограниченной очередью, используя прежние приемы, можно найти:
 среднее число занятых каналов
             </span>
-            <img src="https://www.semestr.ru/images/math/cmo/c1_image075.gif">
+            <p class="theme-text"><span class="math display">$$\overline{k} = \frac{\lambda}{\mu} = p$$</span></p>
             <span class="theme-text">среднее число заявок в очереди</span>
-            <img src="https://www.semestr.ru/images/math/cmo/c1_image076.gif">
+            <p class="theme-text"><span class="math display">$$L_{оч.} = \frac{p^{n+1} p_{0}}{n * n!(1-\frac{p}{n})^{2}}$$</span></p>
             <span class="theme-text">
                 среднее число заявок в системе
             </span>
